026-using-kubernetes/ep026.10.04-networking-part-4-ingress/k8s/asrv2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asrv2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asrv2
  template:
    metadata:
      labels:
        app: asrv2
    spec:
      containers:
        - name: asrv2
          image: striversity/using-k8s-asrv:v0.0.2
          ports:
            - containerPort: 8080
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
