026-using-kubernetes/ep026.10.04-networking-part-4-ingress/k8s/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  labels:
    name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: "/srv1"
        pathType: Prefix
        backend:
          service:
            name: asrv1
            port: 
              number: 8080
      - path: "/srv2"
        pathType: Prefix
        backend:
          service:
            name: asrv2
            port: 
              number: 8080
      - path: "/nginx"
        pathType: Prefix
        backend:
          service:
            name: asrv2
            port: 
              number: 80
